Fixed typos and line-height.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<div style="font-family: 'Avenir Next', Avenir" class="bgc:red fs:2r fs:4r@md fs:8r@lg fs:16r@xl fw:100 ff:s c:w.1 p:2r">blink!</div>
 	<header id="top" class="p:2r">
 		<h1 class="m:0 c:red c:w:h fw:700 ls:-.0625e" style="font-family: 'Avenir Next', Avenir">blink<span class="c:b.3 fw:200 tt:u">ui</span></h1>
-		<p class="m:0 "><u>Web and interface design in the <span class="c:red:h ">blink</span> of an eye.</u></p>
+		<p class="m:0 lh:1.25"><u>Web and interface design in the <span class="c:red:h ">blink</span> of an eye.</u></p>
 	</header>
 	<nav id="toc" class="p:2r ox:s ws:nw brw:medium brw:0@xl bc:red c:b.3 fs:1.5r@xl">
 		<ul>
@@ -795,7 +795,7 @@
 					</div>
 					<hr>
 					<div class="d:f fd:rr jc:sb w:16r">
-						<div class="ml:1r">row:reverse <code>fd:rr</code></div>
+						<div class="ml:1r">row-reverse <code>fd:rr</code></div>
 						<div class="h:1r w:1r br:100% bgc:b"></div>
 						<div class="h:1r w:1r br:100% bgc:b.6"></div>
 						<div class="h:1r w:1r br:100% bgc:b.3"></div>
@@ -844,7 +844,7 @@
 						<div class="fg:0 fs:0 h:1r w:1r br:100% bgc:b m:.25r"></div>
 					</div>
 					<div class="d:f fw:wr mw:16r p:2r bw:medium">
-						<div class="mr:1r">wrap:reverse <code>fw:wr</code></div>
+						<div class="mr:1r">wrap-reverse <code>fw:wr</code></div>
 						<div class="fg:0 fs:0 h:1r w:1r br:100% bgc:b m:.25r"></div>
 						<div class="fg:0 fs:0 h:1r w:1r br:100% bgc:b m:.25r"></div>
 						<div class="fg:0 fs:0 h:1r w:1r br:100% bgc:b m:.25r"></div>
