--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="css/blink.css" rel="stylesheet">
 	<link rel="apple-touch-icon" href="/blink.png">
 	<link rel="mask-icon" href="/blink_icon.svg" color="#f53d5c">
+	<link rel="icon" href="/blink_icon.png">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-title" content="blinkUI">
 	<meta name="theme-color" content="#f53d5c">
@@ -16,7 +17,7 @@
 		nav#toc {
 			margin-bottom: var(--2);
 		}
-
+		
 		header>h2 {
 			margin-top: var(--2);
 		}
