--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	</header>
 	<nav id="toc" class="p:2r ox:s ws:nw brw:medium brw:0@xl bc:red c:b.3 fs:1.5r@xl">
 		<ul>
-			<li class="d:f mr_1r mb_1r"> <b><a href="#typo">Typography:</a></b>
+			<li class="d:f mr_1r mb_1r"> <b><a href="#typo">Typography</a></b>
 				<ul class="d:f mr_.5r">
 					<li><a href="#typo__font-family">font-family</a></li>
 					<li><a href="#typo__font-size">font-size</a></li>
