Fixed two typos.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					<p> <span class="fs:1.5r">1.5rem</span> <code>fs:1.5r</code> </p>
 					<p> <span class="fs:1r">1rem</span> <code>fs:1r</code> </p>
 					<p> <span class="fs:.875r">.875rem</span> <code>fs:.875r</code> </p>
-					<p> <span class="fs:.75r">.75rem</span> <code>fs:.75</code> </p>
+					<p> <span class="fs:.75r">.75rem</span> <code>fs:.75r</code> </p>
 				</div>
 			</article>
 			<article id="typo__line-height">
@@ -193,7 +193,7 @@
 					<p> <span class="fw:600 fs:2r fs:4r@md">600 (semi-bold)</span> <code>fw:600</code> </p>
 					<p> <span class="fw:700 fs:2r fs:4r@md">700 (bold)</span> <code>fw:700</code> </p>
 					<p> <span class="fw:800 fs:2r fs:4r@md">800 (extra-bold)</span> <code>fw:800</code> </p>
-					<p> <span class="fw:900 fs:2r fs:4r@md">900 (ultra-bold)</span> <code>.fw:900</code> </p>
+					<p> <span class="fw:900 fs:2r fs:4r@md">900 (ultra-bold)</span> <code>fw:900</code> </p>
 				</div>
 			</article>
 			<article id="typo__font-style">
