Added gradients to the background-image color module.

--- a/index.html
+++ b/index.html
@@ -1245,30 +1245,58 @@
 				<!-- transparent -->
 				<div class="p:1r bgc:t bw:thick fw:b fb:20% ta:c bc:w"> transparent
 					<br> <code class="c:b">bgc:t</code> </div>
+				<!-- colors -->
 				<div class="d:f@md fw:w fw:b c:w">
-					<div class="p:1r bgc:red bw:thick fb:20% ta:c"> red
+					<div class="p:1r bgc:red bgc:redgradient:h bw:thick fb:20% ta:c"> red
 						<br> <code>bgc:red</code> </div>
-					<div class="p:1r bgc:orange bw:thick fb:20% ta:c"> orange
+					<div class="p:1r bgc:orange bgc:orangegradient:h bw:thick fb:20% ta:c"> orange
 						<br> <code>bgc:orange</code> </div>
-					<div class="p:1r bgc:yellow bw:thick fb:20% ta:c"> yellow
+					<div class="p:1r bgc:yellow bgc:yellowgradient:h bw:thick fb:20% ta:c"> yellow
 						<br> <code>bgc:yellow</code> </div>
-					<div class="p:1r bgc:lime bw:thick fb:20% ta:c"> lime
+					<div class="p:1r bgc:lime bgc:limegradient:h bw:thick fb:20% ta:c"> lime
 						<br> <code>bgc:lime</code> </div>
-					<div class="p:1r bgc:green bw:thick fb:20% ta:c"> green
+					<div class="p:1r bgc:green bgc:greengradient:h bw:thick fb:20% ta:c"> green
 						<br> <code>bgc:green</code> </div>
-					<div class="p:1r bgc:teal bw:thick fb:20% ta:c"> teal
+					<div class="p:1r bgc:teal bgc:tealgradient:h bw:thick fb:20% ta:c"> teal
 						<br> <code>bgc:teal</code> </div>
-					<div class="p:1r bgc:cyan bw:thick fb:20% ta:c"> cyan
+					<div class="p:1r bgc:cyan bgc:cyangradient:h bw:thick fb:20% ta:c"> cyan
 						<br> <code>bgc:cyan</code> </div>
-					<div class="p:1r bgc:blue bw:thick fb:20% ta:c"> blue
+					<div class="p:1r bgc:blue bgc:bluegradient:h bw:thick fb:20% ta:c"> blue
 						<br> <code>bgc:blue</code> </div>
-					<div class="p:1r bgc:indigo bw:thick fb:20% ta:c"> indigo
+					<div class="p:1r bgc:indigo bgc:indigogradient:h bw:thick fb:20% ta:c"> indigo
 						<br> <code>bgc:indigo</code> </div>
-					<div class="p:1r bgc:violet bw:thick fb:20% ta:c"> violet
+					<div class="p:1r bgc:violet bgc:violetgradient:h bw:thick fb:20% ta:c"> violet
 						<br> <code>bgc:violet</code> </div>
-					<div class="p:1r bgc:magenta bw:thick fb:20% ta:c"> magenta
+					<div class="p:1r bgc:magenta bgc:magentagradient:h bw:thick fb:20% ta:c"> magenta
 						<br> <code>bgc:magenta</code> </div>
-					<div class="p:1r bgc:pink bw:thick fb:20% ta:c"> pink
+					<div class="p:1r bgc:pink bgc:pinkgradient:h bw:thick fb:20% ta:c"> pink
+						<br> <code>bgc:pink</code> </div>
+				</div>
+				<!-- colors -->
+				<div class="d:f@md fw:w fw:b c:w">
+					<div class="p:1r bgc:redgradient bw:thick fb:20% ta:c"> red
+						<br> <code>bgc:red</code> </div>
+					<div class="p:1r bgc:orangegradient bw:thick fb:20% ta:c"> orange
+						<br> <code>bgc:orange</code> </div>
+					<div class="p:1r bgc:yellowgradient bw:thick fb:20% ta:c"> yellow
+						<br> <code>bgc:yellow</code> </div>
+					<div class="p:1r bgc:limegradient bw:thick fb:20% ta:c"> lime
+						<br> <code>bgc:lime</code> </div>
+					<div class="p:1r bgc:greengradient bw:thick fb:20% ta:c"> green
+						<br> <code>bgc:green</code> </div>
+					<div class="p:1r bgc:tealgradient bw:thick fb:20% ta:c"> teal
+						<br> <code>bgc:teal</code> </div>
+					<div class="p:1r bgc:cyangradient bw:thick fb:20% ta:c"> cyan
+						<br> <code>bgc:cyan</code> </div>
+					<div class="p:1r bgc:bluegradient bw:thick fb:20% ta:c"> blue
+						<br> <code>bgc:blue</code> </div>
+					<div class="p:1r bgc:indigogradient bw:thick fb:20% ta:c"> indigo
+						<br> <code>bgc:indigo</code> </div>
+					<div class="p:1r bgc:violetgradient bw:thick fb:20% ta:c"> violet
+						<br> <code>bgc:violet</code> </div>
+					<div class="p:1r bgc:magentagradient bw:thick fb:20% ta:c"> magenta
+						<br> <code>bgc:magenta</code> </div>
+					<div class="p:1r bgc:pinkgradient bw:thick fb:20% ta:c"> pink
 						<br> <code>bgc:pink</code> </div>
 				</div>
 				<!-- shades of black -->
