Moved gradients to background-image module.

--- a/index.html
+++ b/index.html
@@ -18,21 +18,26 @@
 			margin-bottom: var(--2);
 		}
 
+
 		header>h2 {
 			margin-top: var(--2);
 		}
+
 
 		article {
 			padding: var(--2);
 		}
 
+
 		article:last-of-type {
-			margin-bottom: 0;
+			margin-bottom: var(--8);
 		}
+
 
 		article:nth-child(odd) {
 			background-color: var(--darken);
 		}
+
 
 		article>header>h3 {
 			display: inline-block;
@@ -47,6 +52,7 @@
 				opacity: 0;
 			}
 		}
+
 
 		body {
 			animation: 1s fade ease-in-out
@@ -124,6 +130,7 @@
 						<li><a href="#theme__color">color</a></li>
 						<li><a href="#theme__background-color">background-color</a></li>
 						<li><a href="#theme__border-color">border-color</a></li>
+						<li><a href="#theme__background-image">background-image</a></li>
 					</ul>
 				</li>
 		</ul>
@@ -1247,56 +1254,29 @@
 					<br> <code class="c:b">bgc:t</code> </div>
 				<!-- colors -->
 				<div class="d:f@md fw:w fw:b c:w">
-					<div class="p:1r bgc:red bgc:redgradient:h bw:thick fb:20% ta:c"> red
+					<div class="p:1r bgc:red bw:thick fb:20% ta:c"> red
 						<br> <code>bgc:red</code> </div>
-					<div class="p:1r bgc:orange bgc:orangegradient:h bw:thick fb:20% ta:c"> orange
+					<div class="p:1r bgc:orange bw:thick fb:20% ta:c"> orange
 						<br> <code>bgc:orange</code> </div>
-					<div class="p:1r bgc:yellow bgc:yellowgradient:h bw:thick fb:20% ta:c"> yellow
+					<div class="p:1r bgc:yellow bw:thick fb:20% ta:c"> yellow
 						<br> <code>bgc:yellow</code> </div>
-					<div class="p:1r bgc:lime bgc:limegradient:h bw:thick fb:20% ta:c"> lime
+					<div class="p:1r bgc:lime bw:thick fb:20% ta:c"> lime
 						<br> <code>bgc:lime</code> </div>
-					<div class="p:1r bgc:green bgc:greengradient:h bw:thick fb:20% ta:c"> green
+					<div class="p:1r bgc:green bw:thick fb:20% ta:c"> green
 						<br> <code>bgc:green</code> </div>
-					<div class="p:1r bgc:teal bgc:tealgradient:h bw:thick fb:20% ta:c"> teal
+					<div class="p:1r bgc:teal bw:thick fb:20% ta:c"> teal
 						<br> <code>bgc:teal</code> </div>
-					<div class="p:1r bgc:cyan bgc:cyangradient:h bw:thick fb:20% ta:c"> cyan
+					<div class="p:1r bgc:cyan bw:thick fb:20% ta:c"> cyan
 						<br> <code>bgc:cyan</code> </div>
-					<div class="p:1r bgc:blue bgc:bluegradient:h bw:thick fb:20% ta:c"> blue
+					<div class="p:1r bgc:blue bw:thick fb:20% ta:c"> blue
 						<br> <code>bgc:blue</code> </div>
-					<div class="p:1r bgc:indigo bgc:indigogradient:h bw:thick fb:20% ta:c"> indigo
+					<div class="p:1r bgc:indigo bw:thick fb:20% ta:c"> indigo
 						<br> <code>bgc:indigo</code> </div>
-					<div class="p:1r bgc:violet bgc:violetgradient:h bw:thick fb:20% ta:c"> violet
+					<div class="p:1r bgc:violet bw:thick fb:20% ta:c"> violet
 						<br> <code>bgc:violet</code> </div>
-					<div class="p:1r bgc:magenta bgc:magentagradient:h bw:thick fb:20% ta:c"> magenta
+					<div class="p:1r bgc:magenta bw:thick fb:20% ta:c"> magenta
 						<br> <code>bgc:magenta</code> </div>
-					<div class="p:1r bgc:pink bgc:pinkgradient:h bw:thick fb:20% ta:c"> pink
-						<br> <code>bgc:pink</code> </div>
-				</div>
-				<!-- colors -->
-				<div class="d:f@md fw:w fw:b c:w">
-					<div class="p:1r bgc:redgradient bw:thick fb:20% ta:c"> red
-						<br> <code>bgc:red</code> </div>
-					<div class="p:1r bgc:orangegradient bw:thick fb:20% ta:c"> orange
-						<br> <code>bgc:orange</code> </div>
-					<div class="p:1r bgc:yellowgradient bw:thick fb:20% ta:c"> yellow
-						<br> <code>bgc:yellow</code> </div>
-					<div class="p:1r bgc:limegradient bw:thick fb:20% ta:c"> lime
-						<br> <code>bgc:lime</code> </div>
-					<div class="p:1r bgc:greengradient bw:thick fb:20% ta:c"> green
-						<br> <code>bgc:green</code> </div>
-					<div class="p:1r bgc:tealgradient bw:thick fb:20% ta:c"> teal
-						<br> <code>bgc:teal</code> </div>
-					<div class="p:1r bgc:cyangradient bw:thick fb:20% ta:c"> cyan
-						<br> <code>bgc:cyan</code> </div>
-					<div class="p:1r bgc:bluegradient bw:thick fb:20% ta:c"> blue
-						<br> <code>bgc:blue</code> </div>
-					<div class="p:1r bgc:indigogradient bw:thick fb:20% ta:c"> indigo
-						<br> <code>bgc:indigo</code> </div>
-					<div class="p:1r bgc:violetgradient bw:thick fb:20% ta:c"> violet
-						<br> <code>bgc:violet</code> </div>
-					<div class="p:1r bgc:magentagradient bw:thick fb:20% ta:c"> magenta
-						<br> <code>bgc:magenta</code> </div>
-					<div class="p:1r bgc:pinkgradient bw:thick fb:20% ta:c"> pink
+					<div class="p:1r bgc:pink bw:thick fb:20% ta:c"> pink
 						<br> <code>bgc:pink</code> </div>
 				</div>
 				<!-- shades of black -->
@@ -1334,9 +1314,9 @@
 						<br> <code>bgc:w.9</code> </div>
 					<div class="p:1r bgc:w.8 bw:thick fb:20% ta:c bc:w"> white .8
 						<br> <code>bgc:w.8</code> </div>
-					<div class="p:1r bgc:w.7 bw:thick fb:20% ta:c bc:w"> white .7
-						<br> <code>bgc:w.7</code> </div>
-					<div class="p:1r bgc:w.6 bw:thick fb:20% ta:c bc:w"> white .6
+					<div cldiv class="p:1r bgc:w.7 bw:thick fb:20% ta:c bc:w"> white .7
+						<br <br> <code>bgc:w.7</code> </div>
+					<div class="p:1r bgc:w.6 bw:thick fb:20% ta:c bc:w"> white white .6
 						<br> <code>bgc:w.6</code> </div>
 					<div class="p:1r bgc:w.5 bw:thick fb:20% ta:c bc:w"> white .5
 						<br> <code>bgc:w.5</code> </div>
@@ -1434,7 +1414,38 @@
 						<br> <code>bc:w.1</code> </div>
 				</div>
 			</article>
-		</section>
+			<article id="theme__background-image">
+				<header>
+					<h3>background-image</h3>
+				</header>
+				<!-- color gradients -->
+				<div class="d:f@md fw:w fw:b c:w">
+					<div class="p:1r bgi:redgradient bw:thick fb:20% ta:c"> red
+						<br> <code>bgi:redgradient</code> </div>
+					<div class="p:1r bgi:orangegradient bw:thick fb:20% ta:c"> orange
+						<br> <code>bgi:orangegradient</code> </div>
+					<div class="p:1r bgi:yellowgradient bw:thick fb:20% ta:c"> yellow
+						<br> <code>bgi:yellowgradient</code> </div>
+					<div class="p:1r bgi:limegradient bw:thick fb:20% ta:c"> lime
+						<br> <code>bgi:limegradient</code> </div>
+					<div class="p:1r bgi:greengradient bw:thick fb:20% ta:c"> green
+						<br> <code>bgi:greengradient</code> </div>
+					<div class="p:1r bgi:tealgradient bw:thick fb:20% ta:c"> teal
+						<br> <code>bgi:tealgradient</code> </div>
+					<div class="p:1r bgi:cyangradient bw:thick fb:20% ta:c"> cyan
+						<br> <code>bgi:cyangradient</code> </div>
+					<div class="p:1r bgi:bluegradient bw:thick fb:20% ta:c"> blue
+						<br> <code>bgi:bluegradient</code> </div>
+					<div class="p:1r bgi:indigogradient bw:thick fb:20% ta:c"> indigo
+						<br> <code>bgi:indigogradient</code> </div>
+					<div class="p:1r bgi:violetgradient bw:thick fb:20% ta:c"> violet
+						<br> <code>bgi:violetgradient</code> </div>
+					<div class="p:1r bgi:magentagradient bw:thick fb:20% ta:c"> magenta
+						<br> <code>bgi:magentagradient</code> </div>
+					<div class="p:1r bgi:pinkgradient bw:thick fb:20% ta:c"> pink
+						<br> <code>bgi:pinkgradient</code> </div>
+				</div>
+			</article </section>
 	</main>
 	<footer class="p:2r bgc:b c:w">Created by <address class="d:i"><a href="mailto:gerbaulet@hs-ulm.de">Damian Gerbaulet</a> (Professor at the University of Applied Sciences Ulm, Germany)</address> Greatly inspired by <a href="http://basscss.com" target="_blank">basscss</a>,
 		<a href="http://tachyons.io" target="_blank">tachyons</a> and <a href="https://github.com/chantastic/minions.css" target="_blank">minions</a>.</footer>
