Removed the hover classes for now and added border gradients.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,25 @@
 		}
 
 
+
+
+
+
+
+
+
+
 		header>h2 {
 			margin-top: var(--2);
 		}
+
+
+
+
+
+
+
+
 
 
 		article {
@@ -29,14 +45,38 @@
 		}
 
 
+
+
+
+
+
+
+
+
 		article:last-of-type {
 			margin-bottom: var(--8);
 		}
 
 
+
+
+
+
+
+
+
+
 		article:nth-child(odd) {
 			background-color: var(--darken);
 		}
+
+
+
+
+
+
+
+
 
 
 		article>header>h3 {
@@ -52,6 +92,14 @@
 				opacity: 0;
 			}
 		}
+
+
+
+
+
+
+
+
 
 
 		body {
@@ -1254,7 +1302,7 @@
 					<br> <code class="c:b">bgc:t</code> </div>
 				<!-- colors -->
 				<div class="d:f@md fw:w fw:b c:w">
-					<div class="p:1r bgc:red bw:thick fb:20% ta:c"> red
+					<div class="p:1r bgc:red bgi:white:h bw:thick fb:20% ta:c"> red
 						<br> <code>bgc:red</code> </div>
 					<div class="p:1r bgc:orange bw:thick fb:20% ta:c"> orange
 						<br> <code>bgc:orange</code> </div>
@@ -1445,7 +1493,39 @@
 					<div class="p:1r bgi:pinkgradient bw:thick fb:20% ta:c"> pink
 						<br> <code>bgi:pinkgradient</code> </div>
 				</div>
-			</article </section>
+			</article>
+			<article id="theme__border-image">
+				<header>
+					<h3>border-image</h3>
+				</header>
+				<div class="d:f@md fw:w fw:b">
+					<div class="p:1r bi:redgradient bw:thick fb:20% ta:c"> red
+						<br> <code>bi:redgradient</code> </div>
+					<div class="p:1r bi:orangegradient bw:thick fb:20% ta:c"> orange
+						<br> <code>bi:orangegradient</code> </div>
+					<div class="p:1r bi:yellowgradient bw:thick fb:20% ta:c"> yellow
+						<br> <code>bi:yellowgradient</code> </div>
+					<div class="p:1r bi:limegradient bw:thick fb:20% ta:c"> lime
+						<br> <code>bi:limegradient</code> </div>
+					<div class="p:1r bi:greengradient bw:thick fb:20% ta:c"> green
+						<br> <code>bi:greengradient</code> </div>
+					<div class="p:1r bi:tealgradient bw:thick fb:20% ta:c"> teal
+						<br> <code>bi:tealgradient</code> </div>
+					<div class="p:1r bi:cyangradient bw:thick fb:20% ta:c"> cyan
+						<br> <code>bi:cyangradient</code> </div>
+					<div class="p:1r bi:bluegradient bw:thick fb:20% ta:c"> blue
+						<br> <code>bi:bluegradient</code> </div>
+					<div class="p:1r bi:indigogradient bw:thick fb:20% ta:c"> indigo
+						<br> <code>bi:indigogradient</code> </div>
+					<div class="p:1r bi:violetgradient bw:thick fb:20% ta:c"> violet
+						<br> <code>bi:violetgradient</code> </div>
+					<div class="p:1r bi:magentagradient bw:thick fb:20% ta:c"> magenta
+						<br> <code>bi:magentagradient</code> </div>
+					<div class="p:1r bi:pinkgradient bw:thick fb:20% ta:c"> pink
+						<br> <code>bi:pinkgradient</code> </div>
+				</div>
+			</article>
+		</section>
 	</main>
 	<footer class="p:2r bgc:b c:w">Created by <address class="d:i"><a href="mailto:gerbaulet@hs-ulm.de">Damian Gerbaulet</a> (Professor at the University of Applied Sciences Ulm, Germany)</address> Greatly inspired by <a href="http://basscss.com" target="_blank">basscss</a>,
 		<a href="http://tachyons.io" target="_blank">tachyons</a> and <a href="https://github.com/chantastic/minions.css" target="_blank">minions</a>.</footer>
