Frosted glass effect on back-to-top-button.

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
 				<div><span class="p:a r:1r fs:1.5r">absolute</span> <code>p:a</code></div>
 				<div>
 					<nav>
-						<a class="p:f zi:2 b:1r r:1r h:4r w:4r br:100% bgc:w.9 d:f ai:c jc:c o:.6:h bs:.125r" href="#top">
+						<a class="p:f zi:2 b:1r r:1r h:4r w:4r br:100% bgc:w.8 d:f ai:c jc:c o:.6:h bs:.125r" href="#top" style="-webkit-backdrop-filter: blur(.125rem)">
 							<svg data-icon="chevronUp" viewBox="0 0 32 32" class="h:1r w:1r">
 								<title>Arrow pointing upwards</title>
 								<path d="M1 20 L16 6 L31 20 L27 24 L16 14 L5 24 z"></path>
